--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,22 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 
     <style>
-        /* Tables */
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 12px;
-            text-align: left;
-            border-bottom: 1px solid #ddd; /* Đường viền nhẹ */
-        }
-        tr:hover {
-            background-color: #f5f5f5; /* Hiệu ứng hover cho bảng */
-        }
-        .table-responsive {
-            overflow-x: auto; /* Đảm bảo bảng có thể cuộn ngang trên màn hình nhỏ */
-        }
+        
         /* Sticky footer và gradient background */
         html, body {
             height: 100%;
@@ -92,6 +77,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="https://github.com/sondt1337/wayback-ctf">Github</a></li>
                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="/scoreboards">All Scoreboards</a></li>
             </ul>
