Update project title to 'CTF Scoreboard Archive' for clarity

--- a/app/templates/all_scoreboards.html
+++ b/app/templates/all_scoreboards.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}All Scoreboards - CTF Scoreboard System{% endblock %}
+{% block title %}All Scoreboards - CTF Scoreboard Archive{% endblock %}
 
 {% block content %}
 <h1 class="text-center mb-4">All Scoreboards</h1>
