--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Home - CTF Scoreboard System{% endblock %}
+{% block title %}Home - CTF Scoreboard Archive{% endblock %}
 
 {% block content %}
-<h1 class="text-center mb-4 animate__animated animate__fadeInDown">Welcome to the CTF Scoreboard System</h1>
+<h1 class="text-center mb-4 animate__animated animate__fadeInDown">Welcome to the CTF Scoreboard Archive</h1>
 
 <p class="text-center mb-4 animate__animated animate__fadeInUp">Select an option below to view or upload a scoreboard.</p>
 
