--- a/app/templates/scoreboard.html
+++ b/app/templates/scoreboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ title }} Scoreboard - CTF Scoreboard System{% endblock %}
+{% block title %}{{ title }} Scoreboard - CTF Scoreboard Archive{% endblock %}
 
 {% block content %}
 <h1 class="text-center mb-4">{{ title }} Scoreboard</h1>
