--- a/app/templates/all_scoreboards.html
+++ b/app/templates/all_scoreboards.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}All Scoreboards - CTF Scoreboard System{% endblock %}
+{% block title %}All Scoreboards - CTF Scoreboard Archive{% endblock %}
 
 {% block content %}
 <h1 class="text-center mb-4">All Scoreboards</h1>
 
 <!-- Search bar -->
-<div class="input-group mb-3">
+<div class="input-group xmb-3">
     <input type="text" class="form-control" placeholder="Search for a scoreboard" id="searchInput">
 </div>
 
