update create_gif function

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,6 +33,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="/scoreboards">All Scoreboards</a></li>
+                <li class="nav-item"><a class="nav-link" href="/all_gifs">All Created GIFs</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://github.com/sondt1337/wayback-ctf">Github</a></li>
             </ul>
         </div>
