--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,9 +48,15 @@
 </div>
 
 <!-- Footer -->
+<!-- Footer -->
 <footer class="footer">
-    <p>CTF Scoreboard Archive © 2024</p>
+    <div class="container">
+        <span>&copy; <span id="year"></span> sondt1337 - krixov. All Rights Reserved.</span>
+    </div>
 </footer>
+
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
+
 
 <!-- Bootstrap JS and AOS JS for animations -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
